--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+	android:versionName="1.1-alpha"
     package="com.kostya.wifilock" >
 	<uses-feature android:name="android.hardware.wifi" />
 	<uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
